REVISION: Ensure mode context overflow is ‘auto’ on large screens.

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -9170,7 +9170,7 @@ ol.metadata {
       /* line 270, /Users/Brandon/Sites/platform-design.dev/assets/sass/4_blocks/_mode-context.scss */
       .mode-context.init {
         max-height: none;
-        overflow-y: visible; }
+        overflow-y: auto; }
         /* line 324, /Users/Brandon/Sites/platform-design.dev/assets/sass/4_blocks/_mode-context.scss */
         .mode-context.init .mode-context-header {
           padding-top: 1px; }
