--- a/assets/sass/4_blocks/_mode-context.scss
+++ b/assets/sass/4_blocks/_mode-context.scss
@@ -319,7 +319,7 @@
 
         @include media($medium) {
             max-height: none;
-            overflow-y: visible;
+            overflow-y: auto;
 
             .mode-context-header {
                 padding-top: 1px;
